--- a/Gold.ipynb
+++ b/Gold.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,517 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn import metrics"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Collection and Processing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>SPX</th>\n",
+       "      <th>GLD</th>\n",
+       "      <th>USO</th>\n",
+       "      <th>SLV</th>\n",
+       "      <th>EUR/USD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/2/2008</td>\n",
+       "      <td>1447.160034</td>\n",
+       "      <td>84.860001</td>\n",
+       "      <td>78.470001</td>\n",
+       "      <td>15.1800</td>\n",
+       "      <td>1.471692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/3/2008</td>\n",
+       "      <td>1447.160034</td>\n",
+       "      <td>85.570000</td>\n",
+       "      <td>78.370003</td>\n",
+       "      <td>15.2850</td>\n",
+       "      <td>1.474491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/4/2008</td>\n",
+       "      <td>1411.630005</td>\n",
+       "      <td>85.129997</td>\n",
+       "      <td>77.309998</td>\n",
+       "      <td>15.1670</td>\n",
+       "      <td>1.475492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/7/2008</td>\n",
+       "      <td>1416.180054</td>\n",
+       "      <td>84.769997</td>\n",
+       "      <td>75.500000</td>\n",
+       "      <td>15.0530</td>\n",
+       "      <td>1.468299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/8/2008</td>\n",
+       "      <td>1390.189941</td>\n",
+       "      <td>86.779999</td>\n",
+       "      <td>76.059998</td>\n",
+       "      <td>15.5900</td>\n",
+       "      <td>1.557099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2285</th>\n",
+       "      <td>5/8/2018</td>\n",
+       "      <td>2671.919922</td>\n",
+       "      <td>124.589996</td>\n",
+       "      <td>14.060000</td>\n",
+       "      <td>15.5100</td>\n",
+       "      <td>1.186789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2286</th>\n",
+       "      <td>5/9/2018</td>\n",
+       "      <td>2697.790039</td>\n",
+       "      <td>124.330002</td>\n",
+       "      <td>14.370000</td>\n",
+       "      <td>15.5300</td>\n",
+       "      <td>1.184722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2287</th>\n",
+       "      <td>5/10/2018</td>\n",
+       "      <td>2723.070068</td>\n",
+       "      <td>125.180000</td>\n",
+       "      <td>14.410000</td>\n",
+       "      <td>15.7400</td>\n",
+       "      <td>1.191753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2288</th>\n",
+       "      <td>5/14/2018</td>\n",
+       "      <td>2730.129883</td>\n",
+       "      <td>124.489998</td>\n",
+       "      <td>14.380000</td>\n",
+       "      <td>15.5600</td>\n",
+       "      <td>1.193118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2289</th>\n",
+       "      <td>5/16/2018</td>\n",
+       "      <td>2725.780029</td>\n",
+       "      <td>122.543800</td>\n",
+       "      <td>14.405800</td>\n",
+       "      <td>15.4542</td>\n",
+       "      <td>1.182033</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2290 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date          SPX         GLD        USO      SLV   EUR/USD\n",
+       "0      1/2/2008  1447.160034   84.860001  78.470001  15.1800  1.471692\n",
+       "1      1/3/2008  1447.160034   85.570000  78.370003  15.2850  1.474491\n",
+       "2      1/4/2008  1411.630005   85.129997  77.309998  15.1670  1.475492\n",
+       "3      1/7/2008  1416.180054   84.769997  75.500000  15.0530  1.468299\n",
+       "4      1/8/2008  1390.189941   86.779999  76.059998  15.5900  1.557099\n",
+       "...         ...          ...         ...        ...      ...       ...\n",
+       "2285   5/8/2018  2671.919922  124.589996  14.060000  15.5100  1.186789\n",
+       "2286   5/9/2018  2697.790039  124.330002  14.370000  15.5300  1.184722\n",
+       "2287  5/10/2018  2723.070068  125.180000  14.410000  15.7400  1.191753\n",
+       "2288  5/14/2018  2730.129883  124.489998  14.380000  15.5600  1.193118\n",
+       "2289  5/16/2018  2725.780029  122.543800  14.405800  15.4542  1.182033\n",
+       "\n",
+       "[2290 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load the dataset csv dataset to pandas dataframe\n",
+    "\n",
+    "gold = pd.read_csv('gld_price_data.csv')\n",
+    "gold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>SPX</th>\n",
+       "      <th>GLD</th>\n",
+       "      <th>USO</th>\n",
+       "      <th>SLV</th>\n",
+       "      <th>EUR/USD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/2/2008</td>\n",
+       "      <td>1447.160034</td>\n",
+       "      <td>84.860001</td>\n",
+       "      <td>78.470001</td>\n",
+       "      <td>15.180</td>\n",
+       "      <td>1.471692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/3/2008</td>\n",
+       "      <td>1447.160034</td>\n",
+       "      <td>85.570000</td>\n",
+       "      <td>78.370003</td>\n",
+       "      <td>15.285</td>\n",
+       "      <td>1.474491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/4/2008</td>\n",
+       "      <td>1411.630005</td>\n",
+       "      <td>85.129997</td>\n",
+       "      <td>77.309998</td>\n",
+       "      <td>15.167</td>\n",
+       "      <td>1.475492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/7/2008</td>\n",
+       "      <td>1416.180054</td>\n",
+       "      <td>84.769997</td>\n",
+       "      <td>75.500000</td>\n",
+       "      <td>15.053</td>\n",
+       "      <td>1.468299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/8/2008</td>\n",
+       "      <td>1390.189941</td>\n",
+       "      <td>86.779999</td>\n",
+       "      <td>76.059998</td>\n",
+       "      <td>15.590</td>\n",
+       "      <td>1.557099</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Date          SPX        GLD        USO     SLV   EUR/USD\n",
+       "0  1/2/2008  1447.160034  84.860001  78.470001  15.180  1.471692\n",
+       "1  1/3/2008  1447.160034  85.570000  78.370003  15.285  1.474491\n",
+       "2  1/4/2008  1411.630005  85.129997  77.309998  15.167  1.475492\n",
+       "3  1/7/2008  1416.180054  84.769997  75.500000  15.053  1.468299\n",
+       "4  1/8/2008  1390.189941  86.779999  76.059998  15.590  1.557099"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print first 5 rows\n",
+    "gold.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>SPX</th>\n",
+       "      <th>GLD</th>\n",
+       "      <th>USO</th>\n",
+       "      <th>SLV</th>\n",
+       "      <th>EUR/USD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2285</th>\n",
+       "      <td>5/8/2018</td>\n",
+       "      <td>2671.919922</td>\n",
+       "      <td>124.589996</td>\n",
+       "      <td>14.0600</td>\n",
+       "      <td>15.5100</td>\n",
+       "      <td>1.186789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2286</th>\n",
+       "      <td>5/9/2018</td>\n",
+       "      <td>2697.790039</td>\n",
+       "      <td>124.330002</td>\n",
+       "      <td>14.3700</td>\n",
+       "      <td>15.5300</td>\n",
+       "      <td>1.184722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2287</th>\n",
+       "      <td>5/10/2018</td>\n",
+       "      <td>2723.070068</td>\n",
+       "      <td>125.180000</td>\n",
+       "      <td>14.4100</td>\n",
+       "      <td>15.7400</td>\n",
+       "      <td>1.191753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2288</th>\n",
+       "      <td>5/14/2018</td>\n",
+       "      <td>2730.129883</td>\n",
+       "      <td>124.489998</td>\n",
+       "      <td>14.3800</td>\n",
+       "      <td>15.5600</td>\n",
+       "      <td>1.193118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2289</th>\n",
+       "      <td>5/16/2018</td>\n",
+       "      <td>2725.780029</td>\n",
+       "      <td>122.543800</td>\n",
+       "      <td>14.4058</td>\n",
+       "      <td>15.4542</td>\n",
+       "      <td>1.182033</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date          SPX         GLD      USO      SLV   EUR/USD\n",
+       "2285   5/8/2018  2671.919922  124.589996  14.0600  15.5100  1.186789\n",
+       "2286   5/9/2018  2697.790039  124.330002  14.3700  15.5300  1.184722\n",
+       "2287  5/10/2018  2723.070068  125.180000  14.4100  15.7400  1.191753\n",
+       "2288  5/14/2018  2730.129883  124.489998  14.3800  15.5600  1.193118\n",
+       "2289  5/16/2018  2725.780029  122.543800  14.4058  15.4542  1.182033"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print last 5 rows\n",
+    "\n",
+    "gold.tail()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2290, 6)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gold.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2290 entries, 0 to 2289\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   Date     2290 non-null   object \n",
+      " 1   SPX      2290 non-null   float64\n",
+      " 2   GLD      2290 non-null   float64\n",
+      " 3   USO      2290 non-null   float64\n",
+      " 4   SLV      2290 non-null   float64\n",
+      " 5   EUR/USD  2290 non-null   float64\n",
+      "dtypes: float64(5), object(1)\n",
+      "memory usage: 107.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "gold.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date       0\n",
+       "SPX        0\n",
+       "GLD        0\n",
+       "USO        0\n",
+       "SLV        0\n",
+       "EUR/USD    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gold.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
